[gd_scene load_steps=14 format=3 uid="uid://b4xp0w52hwj68"]

[ext_resource type="Script" path="res://Scripts/Behaviour/b_puf.gd" id="1_q7ds5"]
[ext_resource type="AnimationLibrary" uid="uid://ig4s8klxx25" path="res://Resources/Animations/Pufs/Pufs.res" id="2_54i3k"]
[ext_resource type="Texture2D" uid="uid://ceqt72a6dvh3m" path="res://Resources/Tileset/pufs/shadow.png" id="3_dpvcn"]
[ext_resource type="Texture2D" uid="uid://di573c1n2ua1r" path="res://Resources/Tileset/pufs/richv2.png" id="4_dve2d"]
[ext_resource type="Texture2D" uid="uid://b66mb70cikal5" path="res://Resources/Tileset/pufs/Selected_puf/Selected_e.png" id="5_ac0b0"]
[ext_resource type="Texture2D" uid="uid://c6pua88wjwxqw" path="res://Resources/Tileset/pufs/Selected_puf/Selected_i.png" id="6_hsppp"]
[ext_resource type="PackedScene" uid="uid://cxplgw56ji1xh" path="res://Scenes/smash_animation.tscn" id="7_tlyfv"]

[sub_resource type="Animation" id="Animation_r0hht"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritePuf:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpritePuf:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpritePuf:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpritePuf:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpritePuf:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ngbqv"]
_data = {
"RESET": SubResource("Animation_r0hht")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ug8ye"]
size = Vector2(14, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_4qvs0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ac0b0")
}, {
"duration": 1.0,
"texture": ExtResource("6_hsppp")
}],
"loop": true,
"name": &"selected",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bn6ww"]
size = Vector2(12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_13fw2"]
radius = 4.0

[node name="CharacterBody2D" type="CharacterBody2D" groups=["pufs"]]
light_mask = 2
visibility_layer = 2
z_index = 1
texture_filter = 1
scale = Vector2(0.7, 0.7)
collision_layer = 2
collision_mask = 2
input_pickable = true
script = ExtResource("1_q7ds5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ngbqv"),
"Pufs": ExtResource("2_54i3k")
}

[node name="ShapePuf" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_ug8ye")

[node name="Shadow" type="Sprite2D" parent="."]
visible = false
light_mask = 2
visibility_layer = 2
texture_filter = 1
position = Vector2(0, 10)
texture = ExtResource("3_dpvcn")

[node name="SpritePuf" type="Sprite2D" parent="."]
light_mask = 2
visibility_layer = 2
texture_filter = 1
position = Vector2(0, 3)
texture = ExtResource("4_dve2d")
hframes = 4
vframes = 4

[node name="SelectedPuf" type="AnimatedSprite2D" parent="."]
visible = false
light_mask = 16
visibility_layer = 16
texture_filter = 1
position = Vector2(0, 4)
sprite_frames = SubResource("SpriteFrames_4qvs0")
animation = &"selected"

[node name="SmashSprite" parent="." instance=ExtResource("7_tlyfv")]
visible = false
light_mask = 2
visibility_layer = 2
position = Vector2(1.19209e-07, 1.90735e-06)

[node name="InteractionComponents" type="Node2D" parent="."]
z_index = 1
position = Vector2(0, 4)
scale = Vector2(3, 3)

[node name="AssembleArea" type="Area2D" parent="InteractionComponents"]
light_mask = 2
visibility_layer = 2
collision_layer = 2
collision_mask = 2

[node name="AssembleShape" type="CollisionShape2D" parent="InteractionComponents/AssembleArea"]
position = Vector2(0, -0.333)
shape = SubResource("RectangleShape2D_bn6ww")
debug_color = Color(0.164706, 0.643137, 0, 0.113725)

[node name="RepulsionArea" type="Area2D" parent="InteractionComponents"]
light_mask = 2
visibility_layer = 2
collision_layer = 2
collision_mask = 2
input_pickable = false

[node name="RepulsionShape" type="CollisionShape2D" parent="InteractionComponents/RepulsionArea"]
position = Vector2(0, -0.333333)
shape = SubResource("CircleShape2D_13fw2")
debug_color = Color(0.956863, 0, 0.537255, 0.0745098)

[node name="WaitTime" type="Timer" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="InteractionComponents/AssembleArea" to="." method="_on_assemble_area_mouse_entered"]
[connection signal="mouse_exited" from="InteractionComponents/AssembleArea" to="." method="_on_assemble_area_mouse_exited"]
